# trolly

./: .gitignore  Dockerfile  README.md  heroku.yml  index.html  pyproject.toml  script.js  styles.css
src/trolly/: __init__.py  analytics.py  app.py  dilemmas.py  view_results.py
