[project]
name = "trolly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]

[project.scripts]
trolly = "trolly:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
